refactor eror handling at merchant and add documentation
